Fixed large number of code quality warnings